--- a/v2/package.json
+++ b/v2/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.4",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "json2xls": "^0.1.2",
     "log4js": "^1.1.0",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
